# yfin

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: common.rs  display.rs  error.rs  init.rs  install.rs  installer.rs  local.rs  main.rs  package.rs  repository.rs  spinner.rs  uninstall.rs  upgrade.rs
