[package]
name = "yfin"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
structopt = { version = "0.3", default-features = false }
spinners = "2.0.0"
env_logger = "0.9.0"
users = "0.11"
log = "0.4.14"
indicatif = "0.16.2"
reqwest = "0.9.18"
yaml-rust = "0.4"
home = "0.5.3"
serde = "1.0.132"
serde_yaml = "0.8"
